--- a/app/src/main/res/layout/dialog_photo.xml
+++ b/app/src/main/res/layout/dialog_photo.xml
@@ -7,7 +7,7 @@
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/dialogTitle"
+        android:id="@+id/dialog_title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/photo"
@@ -17,13 +17,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/load_from_gallery"
-        android:id="@+id/buttonGallery" />
+        android:id="@+id/gallery_btn" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/take_photo"
-        android:id="@+id/buttonCamera"
+        android:id="@+id/camera_btn"
         android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
