--- a/app/src/main/res/layout/fragment_league.xml
+++ b/app/src/main/res/layout/fragment_league.xml
@@ -10,17 +10,15 @@
         tools:context=".fragments.leagueFragment.LeagueFragment">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view_league"
+            android:id="@+id/league_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="0dp"
-            android:layout_marginTop="0dp"
             android:scrollbars="vertical" />
 
         <TextView
-            android:id="@+id/textViewLimitMsg"
+            android:id="@+id/limit_msg_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
