--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -13,20 +13,20 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar_setting"
+            android:id="@+id/setting_collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:collapsedTitleTextAppearance="@style/TextAppearance.MyApp.Title.Collapsed"
-            app:expandedTitleTextAppearance="@style/TextAppearance.MyApp.Title.Expanded"
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="48dp"
-            app:titleEnabled="true"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:expandedTitleTextAppearance="@style/TextAppearance.MyApp.Title.Expanded"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:titleEnabled="true">
 
             <ImageView
-                android:id="@+id/imageViewPhoto"
+                android:id="@+id/photo_iv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
@@ -34,7 +34,7 @@
                 app:layout_collapseMode="parallax" />
 
             <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbarSettings"
+                android:id="@+id/settings_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
@@ -64,7 +64,6 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/info"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@string/roboto_regular"
@@ -76,7 +75,7 @@
                         android:textSize="@dimen/material_text_subhead" />
 
                     <RelativeLayout
-                        android:id="@+id/usernameDialog"
+                        android:id="@+id/username_relative"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="?attr/selectableItemBackground"
@@ -84,7 +83,7 @@
                         android:padding="16dp">
 
                         <TextView
-                            android:id="@+id/username_setting"
+                            android:id="@+id/username_setting_tv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentTop="true"
@@ -96,9 +95,9 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_alignLeft="@+id/username_setting"
-                            android:layout_alignStart="@+id/username_setting"
-                            android:layout_below="@+id/username_setting"
+                            android:layout_alignLeft="@+id/username_setting_tv"
+                            android:layout_alignStart="@+id/username_setting_tv"
+                            android:layout_below="@+id/username_setting_tv"
                             android:text="@string/settings_username"
                             android:textColor="#727272"
                             android:textSize="@dimen/material_text_body2" />
@@ -110,7 +109,7 @@
                         android:background="@android:color/darker_gray" />
 
                     <RelativeLayout
-                        android:id="@+id/emailDialog"
+                        android:id="@+id/email_relative"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="?attr/selectableItemBackground"
@@ -118,7 +117,7 @@
                         android:padding="16dp">
 
                         <TextView
-                            android:id="@+id/email_setting"
+                            android:id="@+id/email_setting_tv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@string/roboto_regular"
@@ -127,13 +126,12 @@
                             android:textSize="@dimen/material_text_subhead" />
 
                         <TextView
-                            android:id="@+id/des_email"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_alignLeft="@+id/email_setting"
+                            android:layout_alignLeft="@+id/email_setting_tv"
                             android:layout_alignParentBottom="true"
-                            android:layout_alignStart="@+id/email_setting"
-                            android:layout_below="@+id/email_setting"
+                            android:layout_alignStart="@+id/email_setting_tv"
+                            android:layout_below="@+id/email_setting_tv"
                             android:text="@string/settings_email"
                             android:textColor="#727272" />
                     </RelativeLayout>
@@ -144,7 +142,7 @@
                         android:background="@android:color/darker_gray" />
 
                     <RelativeLayout
-                        android:id="@+id/passDialog"
+                        android:id="@+id/password_relative"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="?attr/selectableItemBackground"
@@ -152,7 +150,7 @@
                         android:padding="16dp">
 
                         <TextView
-                            android:id="@+id/password_setting"
+                            android:id="@+id/password_setting_tv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@string/roboto_regular"
@@ -174,7 +172,6 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/settings"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@string/roboto_regular"
@@ -194,7 +191,6 @@
                         android:padding="16dp">
 
                         <TextView
-                            android:id="@+id/language"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentTop="true"
@@ -204,54 +200,27 @@
                             android:textSize="@dimen/material_text_subhead" />
 
                         <TextView
-                            android:id="@+id/language_change"
+                            android:id="@+id/language_change_tv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignParentRight="true"
                             android:layout_alignParentTop="true"
+                            android:layout_centerVertical="true"
                             android:fontFamily="@string/roboto_regular"
                             android:text="@string/settings_language_change"
                             android:textColor="@color/colorPrimaryDark"
-                            android:textSize="@dimen/material_text_subhead"
-                            android:layout_centerVertical="true"
-                            android:layout_alignParentRight="true"
-                            android:layout_alignParentEnd="true" />
+                            android:textSize="@dimen/material_text_subhead" />
                     </RelativeLayout>
+
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:background="@android:color/darker_gray" />
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="?attr/selectableItemBackground"
-                        android:clickable="true"
-                        android:padding="16dp">
 
-                        <TextView
-                            android:id="@+id/theme"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentTop="true"
-                            android:fontFamily="@string/roboto_regular"
-                            android:text="@string/settings_theme"
-                            android:textColor="@color/dark"
-                            android:textSize="@dimen/material_text_subhead" />
-
-                        <TextView
-                            android:id="@+id/theme_change"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentTop="true"
-                            android:fontFamily="@string/roboto_regular"
-                            android:text="@string/settings_theme_change"
-                            android:textColor="@color/colorPrimaryDark"
-                            android:textSize="@dimen/material_text_subhead"
-                            android:layout_centerVertical="true"
-                            android:layout_alignParentRight="true"
-                            android:layout_alignParentEnd="true" />
-                    </RelativeLayout>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
+
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -263,7 +232,6 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/support"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@string/roboto_regular"
@@ -275,7 +243,7 @@
                         android:textSize="@dimen/material_text_subhead" />
 
                     <RelativeLayout
-                        android:id="@+id/bottomsheet_faq_relative"
+                        android:id="@+id/bottom_sheet_faq_relative"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="?attr/selectableItemBackground"
@@ -283,7 +251,6 @@
                         android:padding="16dp">
 
                         <TextView
-                            android:id="@+id/faq"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentTop="true"
@@ -297,6 +264,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:background="@android:color/darker_gray" />
+
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -306,10 +274,10 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/soccer_event_v0_9"
-                            android:textColor="#727272"
                             android:layout_alignParentTop="true"
-                            android:layout_centerHorizontal="true" />
+                            android:layout_centerHorizontal="true"
+                            android:text="@string/soccer_event_v0_9"
+                            android:textColor="#727272" />
                     </RelativeLayout>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
@@ -317,14 +285,14 @@
     </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/change_photo_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
         android:clickable="true"
         android:src="@drawable/ic_photo_camera_black_24dp"
+        android:tint="@color/white"
         app:backgroundTint="@color/colorPrimaryDark"
         app:layout_anchor="@+id/appbar"
-        android:tint="@color/white"
-        app:layout_anchorGravity="bottom|right|end"
-        android:id="@+id/change_photo"/>
+        app:layout_anchorGravity="bottom|right|end" />
 </android.support.design.widget.CoordinatorLayout>
