--- a/app/src/main/res/layout/league_table_row.xml
+++ b/app/src/main/res/layout/league_table_row.xml
@@ -36,6 +36,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:maxLength="17"
+                    android:text="ggg"
                     android:textSize="16dp"
                     android:gravity="center"
                     android:textAppearance="?android:attr/textAppearanceMedium"
