--- a/app/src/main/res/layout/dialog_email.xml
+++ b/app/src/main/res/layout/dialog_email.xml
@@ -17,6 +17,6 @@
         android:id="@+id/user_input_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
         android:theme="@style/TextLabel" />
 </LinearLayout>
