--- a/app/src/main/res/layout/user_rate_list_row.xml
+++ b/app/src/main/res/layout/user_rate_list_row.xml
@@ -10,7 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        app:cardCornerRadius="2dp">
+        app:cardCornerRadius="2dp"
+        app:rippleColor="@color/colorPrimary">
 
         <RelativeLayout
             android:layout_width="match_parent"
